Added org.apache.cordova.network-information Plugin.

--- a/correlater/www/index.html
+++ b/correlater/www/index.html
@@ -20,9 +20,9 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
-            //app.initialize();
+            app.initialize();
             document.addEventListener("deviceready", function onDeviceReady () {
-              console.log(device.cordova);
+              //console.log(device.cordova);
             }, false);
         </script>
     </body>
