Added battery status Plugin.

--- a/correlater/platforms/android/assets/www/index.html
+++ b/correlater/platforms/android/assets/www/index.html
@@ -26,6 +26,8 @@
             <p id="device"></p>
             <h2>Connection Type</h2>
             <p id="connection"></p>
+            <h2>Battery Status</h2>
+            <p id="battery"></p>
         </div>
 
         <div data-role="footer" data-position="fixed">
