Added Google Login button and received access token.

--- a/correlater/www/index.html
+++ b/correlater/www/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/utilities.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/googlelogin.js"></script>
 </head>
 <body>
     <div data-role="page">
@@ -28,6 +29,10 @@
             <p id="connection"></p>
             <h2>Battery Status</h2>
             <p id="battery"></p>
+            <div id="login">
+              <a>Sign In With Google!</a>
+              <p></p>
+            </div>
         </div>
 
         <div data-role="footer" data-position="fixed">
