Added angularjs and modified instructions

--- a/correlater/www/index.html
+++ b/correlater/www/index.html
@@ -12,15 +12,12 @@
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/angular.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/utilities.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/googlelogin.js"></script>
 </head>
 <body>
     <div data-role="page">
-
-        <div data-role="header" data-position="fixed">
-            <h1>Correlater</h1>
-        </div><!-- /header -->
 
         <div data-role="content">
             <h2>Device</h2>
@@ -29,7 +26,7 @@
             <p id="connection"></p>
             <h2>Battery Status</h2>
             <p id="battery"></p>
-            <div id="login">
+            <div id="login" style="height:50px; background-color: black;">
               <a>Sign In With Google!</a>
               <p></p>
             </div>
