--- a/correlater/www/signIn.html
+++ b/correlater/www/signIn.html
@@ -6,36 +6,37 @@
     <meta name="format-detection" content="telephone=no" />
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/global.css" />
+    <link rel="stylesheet" type="text/css" href="css/addAccount.css" />
     <meta name="msapplication-tap-highlight" content="no" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.css">
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/angular.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/utilities.js"></script>
-    <script type="text/javascript" charset="utf-8" src="js/googlelogin.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/signIn.js"></script>
 </head>
 <body>
     <div data-role="page">
-
+        <div id="navBar" data-role="header" style="overflow:hidden;">
+            <a id="back" data-rel="back" class="ui-btn-left">&lt;</a>
+            <h1 id="title">Sign In</h1>
+        </div><!-- /header -->
         <div data-role="content">
-            <h2>Device</h2>
-            <p id="device"></p>
-            <h2>Connection Type</h2>
-            <p id="connection"></p>
-            <h2>Battery Status</h2>
-            <p id="battery"></p>
-            <div id="login" style="height:50px; background-color: black;">
-              <a>Sign In With Google!</a>
-              <p></p>
-            </div>
+            <form method="post" id="login">
+                <label for="email">E-mail:</label>
+                <input type="text" name="email" id="email" value="">
+                <label for="password">Password:</label>
+                <input type="password" name="password" id="password" value="" autocomplete="off">
+                <div>
+                    <a id="forgotPW">Forget your password?</a>
+                </div>
+                <input type="submit" name="submit" value="Submit">
+            </form>
+            <p id="feedBack"></p>
         </div>
-
-        <div data-role="footer" data-position="fixed">
-            <h4>My Footer</h4>
-        </div>
-
     </div>
 </body>
 </html>
