--- a/correlater/www/finishedImport.html
+++ b/correlater/www/finishedImport.html
@@ -16,13 +16,15 @@
     <script type="text/javascript" charset="utf-8" src="js/googlelogin.js"></script>
 </head>
 <body>
-    <div data-role="page">
+        <div data-role="page">
         <div id="navBar" data-role="header" style="overflow:hidden;">
             <a id="back" data-rel="back" class="ui-btn-left">&lt;</a>
-            <h1 id="title">Pull Calendar</h1>
+            <h1 id="title">Let's get Corralling!</h1>
         </div><!-- /header -->
         <div data-role="content">
-            <button>Pull Calendar!</button>
+            <p>Now that we know your schedule, let's get started.</p>
+            <label><input type="submit" name="submit" value="Next"></label>
+            <p id="feedBack"></p>
         </div>
     </div>
 </body>
