--- a/correlater/www/importError.html
+++ b/correlater/www/importError.html
@@ -16,13 +16,16 @@
     <script type="text/javascript" charset="utf-8" src="js/googlelogin.js"></script>
 </head>
 <body>
-    <div data-role="page">
+        <div data-role="page">
         <div id="navBar" data-role="header" style="overflow:hidden;">
             <a id="back" data-rel="back" class="ui-btn-left">&lt;</a>
-            <h1 id="title">Pull Calendar</h1>
+            <h1 id="title">Oops...</h1>
         </div><!-- /header -->
         <div data-role="content">
-            <button>Pull Calendar!</button>
+            <form method="post" id="chooseCal">
+                <p>Something went wrong. No worries, we'll deal with this later.</p>
+            </form>
+            <p id="feedBack"></p>
         </div>
     </div>
 </body>
