Working on invite page

--- a/correlater/www/nativeCreate.html
+++ b/correlater/www/nativeCreate.html
@@ -21,7 +21,7 @@
 <body>
     <div data-role="page">
         <div id="navBar" data-role="header" style="overflow:hidden;">
-            <a id="back" data-rel="back" class="ui-btn-left">&lt;</a>
+            <button id="back" class="navItem ui-btn-top ui-btn-icon-notext ui-btn ui-icon-carat-l"></button>
             <h1 id="title">Create Account</h1>
         </div><!-- /header -->
         <div data-role="content">
