--- a/correlater/www/invite.html
+++ b/correlater/www/invite.html
@@ -7,7 +7,6 @@
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     <link rel="stylesheet" type="text/css" href="css/global.css" />
-    <link rel="stylesheet" type="text/css" href="css/addAccount.css" />
     <meta name="msapplication-tap-highlight" content="no" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.css">
@@ -16,30 +15,23 @@
     <script type="text/javascript" charset="utf-8" src="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/angular.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/utilities.js"></script>
-    <script type="text/javascript" charset="utf-8" src="js/addAccount.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/invite.js"></script>
 </head>
 <body>
     <div data-role="page">
         <div id="navBar" data-role="header" style="overflow:hidden;">
             <button id="back" class="navItem ui-btn-top ui-btn-icon-notext ui-btn ui-icon-carat-l"></button>
-            <h1 id="title">Add Account</h1>
+            <h1 id="title">Invite a Friend</h1>
         </div><!-- /header -->
         <div data-role="content">
             <div id="container">
-                Select one to begin!<br/>
-                <div id="googleLogin">
-                    <span id="signinButton">
-                      <span
-                        class="g-signin"
-                        data-cookiepolicy="single_host_origin"
-                        data-requestvisibleactions="http://schema.org/AddAction">
-                      </span>
-                    </span>
-                </div>
-                <div>
-                  <a id="nativeCreate">Register With imFree!</a>
-                </div>
-                <p id="feedBack"><br/></p>
+            <form method="post" id="search">
+                <label for="email">E-mail:</label>
+                <input type="text" name="email" id="email" value="">
+                <input type="submit" id="submit" value="Search">
+                <input type="submit" id="invite" value="Send Invite">
+            </form>
+            <p id="feedBack"></p>
             </div>
         </div>
     </div>
