--- a/correlater/www/signIn.html
+++ b/correlater/www/signIn.html
@@ -19,7 +19,7 @@
 <body>
     <div data-role="page">
         <div id="navBar" data-role="header" style="overflow:hidden;">
-            <a id="back" data-rel="back" class="ui-btn-left">&lt;</a>
+            <button id="back" class="navItem ui-btn-top ui-btn-icon-notext ui-btn ui-icon-carat-l"></button>
             <h1 id="title">Sign In</h1>
         </div><!-- /header -->
         <div data-role="content">
