Added the Invite Friend Page as well as cleaning up certain files.

--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-    <link rel="stylesheet" type="text/css" href="css/global.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="msapplication-tap-highlight" content="no" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.css">
@@ -14,15 +13,14 @@
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/angular.js"></script>
-    <script type="text/javascript" charset="utf-8" src="js/utilities.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/main.js"></script>
 </head>
 <body>
     <div data-role="page">
         <div id="navBar" data-role="header" style="overflow:hidden;">
-            <button id="menu" class="navItem ui-btn-top ui-btn-icon-notext ui-btn ui-icon-bars"></button>
-            <h1 id="title">imFree</h1>
-            <button id="friends" class="navItem ui-btn-top ui-btn-icon-notext ui-btn ui-icon-user"></button>
+            <a href="#" id="menu" class="navItem ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all"></a>
+            <h1 id="title">I&#39;m Free</h1>
+            <a href="#" id="friends" class="navItem ui-btn ui-icon-user ui-btn-icon-notext ui-corner-all"></a>
         </div><!-- /header -->
         <div data-role="content">
             <div id="container">
