Cleaned up file headers

--- a/correlater/www/invite.html
+++ b/correlater/www/invite.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.css">
-    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" type="text/css" href="css/global.css">
 
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
@@ -23,7 +23,7 @@
             <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-corner-all"></a>
             <h1 id="title">Invite a Friend</h1>
         </div>
-        <div id="content" data-role="content">
+        <div data-role="content">
           <form method="post" id="search">
               <label for="email">E-mail:</label>
               <input type="email" name="email" id="email">
