--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Correlater</title>
+    <title>I'm Free</title>
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
-    <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="msapplication-tap-highlight" content="no" />
+
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.css">
+
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.js"></script>
@@ -21,11 +22,10 @@
             <a href="#" id="menu" class="navItem ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all"></a>
             <h1 id="title">I&#39;m Free</h1>
             <a href="#" id="friends" class="navItem ui-btn ui-icon-user ui-btn-icon-notext ui-corner-all"></a>
-        </div><!-- /header -->
+        </div>
         <div data-role="content">
-            <div id="container">
-                MAIN SCREEN
-            </div>
+          <h1>Main Screen</h1>
+          <a id="logout" href="#" class="ui-btn ui-shadow">Logout</a>
         </div>
     </div>
 </body>
