--- a/correlater/www/nativeCreate.html
+++ b/correlater/www/nativeCreate.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Correlater</title>
+    <title>I'm Free</title>
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
-    <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/nativeLogin.css" />
     <meta name="msapplication-tap-highlight" content="no" />
+
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.css">
+    <link rel="stylesheet" type="text/css" href="css/nativeLogin.css" />
+
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.js"></script>
@@ -21,7 +22,7 @@
         <div id="navBar" data-role="header" style="overflow:hidden;">
             <button id="back" class="navItem ui-btn-top ui-btn-icon-notext ui-btn ui-icon-carat-l"></button>
             <h1 id="title">Create Account</h1>
-        </div><!-- /header -->
+        </div>
         <div data-role="content">
             <!-- first name, last name, email, password, verify password,  -->
             <form method="post" id="create">
