--- a/correlater/www/signIn.html
+++ b/correlater/www/signIn.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Correlater</title>
+    <title>I'm Free</title>
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,7 @@
         <div id="navBar" data-role="header" style="overflow:hidden;">
             <button id="back" class="navItem ui-btn-top ui-btn-icon-notext ui-btn ui-icon-carat-l"></button>
             <h1 id="title">Sign In</h1>
-        </div><!-- /header -->
+        </div>
         <div data-role="content">
 
             <form method="post" id="login">
