--- a/correlater/www/friends.html
+++ b/correlater/www/friends.html
@@ -15,22 +15,25 @@
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/angular.js"></script>
-    <script type="text/javascript" charset="utf-8" src="js/requests.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/friends.js"></script>
 </head>
 <body>
     <div data-role="page">
         <div id="navBar" data-role="header" style="overflow:hidden;">
             <a href="#" id="menu" class="navItem ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all"></a>
-            <h1 id="title">Requests</h1>
+            <h1 id="title">Friends</h1>
             <a href="#" id="friends" class="navItem ui-btn ui-icon-user ui-btn-icon-notext ui-corner-all"></a>
         </div>
         <div data-role="content">
-          <ul data-role="listview" data-inset="true" data-icon="false" data-divider-theme="a">
-              <li data-role="list-divider" id="requestDivider">Requests<span class="ui-li-count">0</span></li>
-              <li data-role="list-divider" id="friendDivider">Friends<span class="ui-li-count">2</span></li>
-              <li><a href="#">Alex B.</a></li>
-              <li><a href="#">Nick G.</a></li>
-          </ul>
+            <div data-role="collapsible" data-inset="false">
+            <h2 id="requestDivider">Requests<span class="ui-li-count">0</span></h2>
+                <ul data-role="listview" id="requests"></ul>
+            </div>
+
+            <div data-role="collapsible" data-collapsed="false" data-inset="false">
+            <h2 id="friendDivider">Friends<span class="ui-li-count">0</span></h2>
+                <ul data-role="listview" id="friendsList"></ul>
+            </div>
         </div>
     </div>
 </body>
