--- a/correlater/www/signIn.html
+++ b/correlater/www/signIn.html
@@ -35,7 +35,12 @@
                 <a id="forgotPW">Forget your password?</a>
             </div>
             <p id="feedBack"></p>
-
+            <h2>Google Account</h2>
+            <form method="post" id="googleLogin">
+                <label for="email">E-mail:</label>
+                <input type="email" name="email" id="email" value="">
+                <input type="submit" name="submit" value="Submit">
+            </form>
         </div>
     </div>
 </body>
