Refresh Friends Once.

--- a/correlater/www/start.html
+++ b/correlater/www/start.html
@@ -20,9 +20,8 @@
 <body>
     <div data-role="page">
         <div data-role="content">
-            <div id="logo">
-                <img src="img/logo.png"/>
-            </div>
+            <h1>Corral</h1>
+            <h2>(Working Title)</h2>
             <button id="addAccButton" class="ui-btn ui-corner-all ui-btn ui-shadow">
                 Add Account
             </button>
