--- a/correlater/www/nativeCreate.html
+++ b/correlater/www/nativeCreate.html
@@ -20,7 +20,7 @@
 <body>
     <div data-role="page">
         <div id="navBar" data-role="header" style="overflow:hidden;">
-            <button id="back" class="navItem ui-btn-top ui-btn-icon-notext ui-btn ui-icon-carat-l ui-corner-all" data-rel="back"></button>
+            <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-corner-all" data-rel="back"></a>
             <h1 id="title">Create Account</h1>
         </div>
         <div data-role="content">
