--- a/correlater/www/addAccount.html
+++ b/correlater/www/addAccount.html
@@ -10,17 +10,15 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.css">
     <link rel="stylesheet" type="text/css" href="css/addAccount.css" />
-
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="js/angular.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/addAccount.js"></script>
 </head>
 <body>
     <div data-role="page">
         <div id="navBar" data-role="header" style="overflow:hidden;">
-            <button id="back" class="navItem ui-btn-top ui-btn-icon-notext ui-btn ui-icon-carat-l ui-corner-all" data-rel="back"></button>
+            <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-corner-all" data-rel="back"></a>
             <h1 id="title">Add Account</h1>
         </div>
         <div data-role="content">
