--- a/correlater/www/calendar.html
+++ b/correlater/www/calendar.html
@@ -19,7 +19,7 @@
 <body>
     <div data-role="page">
         <div id="navBar" data-role="header" style="overflow:hidden;">
-            <a id="back" data-rel="back" class="ui-btn-left">&lt;</a>
+            <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-corner-all" data-rel="back"></a>
             <h1 id="title">Pull Calendar</h1>
         </div>
         <div data-role="content">
