--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -34,13 +34,13 @@
         <div data-role="panel" id="leftPanel">
             <ul data-role="listview">
                 <li data-icon="delete"><a id="menuTitle" href="#" data-rel="close">Menu</a></li>
-                <li><a href="#panel-responsive-page2">Profile</a></li>
-                <li><a href="#panel-responsive-page2">Weekly Schedule</a></li>
-                <li><a href="#panel-responsive-page2">Add Busy Time</a></li>
-                <li><a href="invite.html">Add Friends</a></li>
-                <li><a href="#panel-responsive-page2">Accounts</a></li>
-                <li><a href="#panel-responsive-page2">Help</a></li>
-                <li><a href="#panel-responsive-page2">Settings</a></li>
+                <li><a href="#panel-responsive-page2" class="ui-state-disabled">Profile</a></li>
+                <li><a href="#panel-responsive-page2" class="ui-state-disabled">Weekly Schedule</a></li>
+                <li><a href="#panel-responsive-page2" class="ui-state-disabled">Add Busy Time</a></li>
+                <li><a href="#" onClick='invite();'>Add Friends</a></li>
+                <li><a href="#panel-responsive-page2" class="ui-state-disabled">Accounts</a></li>
+                <li><a href="#panel-responsive-page2" class="ui-state-disabled">Help</a></li>
+                <li><a href="#panel-responsive-page2" class="ui-state-disabled">Settings</a></li>
                 <li><a id="logout" href="#">Log Out</a></li>
             </ul>
         </div><!-- /panel -->
