--- a/correlater/www/signIn.html
+++ b/correlater/www/signIn.html
@@ -19,7 +19,7 @@
 <body>
     <div data-role="page">
         <div id="navBar" data-role="header" style="overflow:hidden;">
-            <button id="back" class="navItem ui-btn-top ui-btn-icon-notext ui-btn ui-icon-carat-l  ui-corner-all" data-rel="back"></button>
+            <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-corner-all" data-rel="back"></a>
             <h1 id="title">Sign In</h1>
         </div>
         <div data-role="content">
