Fixed refresh error.

--- a/correlater/www/invite.html
+++ b/correlater/www/invite.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/angular.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/invite.js"></script>
 </head>
 <body>
@@ -23,7 +24,7 @@
             <h1 id="title">Invite a Friend</h1>
         </div>
         <div data-role="content">
-          <form method="post" id="search">
+          <form method="post" id="search" data-role="none">
               <label for="email">E-mail:</label>
               <input type="email" name="email" id="email">
               <input type="submit" id="submit" value="Search">
