--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -37,7 +37,7 @@
                 <li><a href="#panel-responsive-page2">Profile</a></li>
                 <li><a href="#panel-responsive-page2">Weekly Schedule</a></li>
                 <li><a href="#panel-responsive-page2">Add Busy Time</a></li>
-                <li><a href="invite.html">Add Friends</a></li>
+                <li><a href="#" onClick="openInvite();">Add Friends</a></li>
                 <li><a href="#panel-responsive-page2">Accounts</a></li>
                 <li><a href="#panel-responsive-page2">Help</a></li>
                 <li><a href="#panel-responsive-page2">Settings</a></li>
