Green On Main Page

--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -28,7 +28,7 @@
         </div><!-- /header -->
         <div role="main" class="ui-content jqm-content jqm-fullwidth">
             <div id="centerPanel" data-role="content">
-                MAIN SCREEN
+                <ul data-role="listview" data-inset="false" id="friendsNow"></ul>
             </div>
         </div><!-- /content -->
         <div data-role="panel" id="leftPanel">
