--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -22,7 +22,7 @@
 <body>
     <div data-role="page" id="main" data-url="demo-page">
         <div  id="navBar" data-role="header" style="overflow:hidden;">
-            <h1 id="title">imFree</h1>
+            <h1 id="title"><a href="#" onClick='refresh()'>I'm Free</a></h1>
             <a id="menu" onClick="openMenu();" class="navItem ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all">Menu</a>
             <a id="friends" onClick="openFriends();" class="navItem ui-btn ui-icon-user ui-btn-icon-notext ui-corner-all">Friends</a>
         </div><!-- /header -->
