--- a/correlater/www/addAccount.html
+++ b/correlater/www/addAccount.html
@@ -9,7 +9,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.css">
-    <link rel="stylesheet" type="text/css" href="css/addAccount.css" />
+    <link rel="stylesheet" type="text/css" href="css/global.css" />
+
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.js"></script>
@@ -17,25 +18,19 @@
 </head>
 <body>
     <div data-role="page">
-        <div id="navBar" data-role="header" style="overflow:hidden;">
+        <div id="navBar" data-role="header" class="primary-3">
             <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-corner-all" data-rel="back"></a>
             <h1 id="title">Add Account</h1>
         </div>
         <div data-role="content">
-              Select one to begin!<br/>
-              <div id="googleLogin">
-                  <span id="signinButton">
-                    <span
-                      class="g-signin"
-                      data-cookiepolicy="single_host_origin"
-                      data-requestvisibleactions="http://schema.org/AddAction">
-                    </span>
-                  </span>
-              </div>
-              <div>
-                <a id="nativeCreate">Register With imFree!</a>
-              </div>
-              <p id="feedBack"><br/></p>
+              <h1>Select one to begin!</h1>
+              <button id="googleLogin" class="ui-btn ui-corner-all ui-btn ui-shadow failed">
+                  Create with Google &#43;
+              </button>
+              <button id="nativeCreate" class="ui-btn ui-corner-all ui-btn ui-shadow">
+                  Create Corral Account
+              </button>
+              <p id="feedBack"></p>
         </div>
     </div>
 </body>
