--- a/correlater/www/chooseCalendar.html
+++ b/correlater/www/chooseCalendar.html
@@ -8,6 +8,7 @@
     <meta name="msapplication-tap-highlight" content="no" />
 
     <link rel="stylesheet" href="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.css">
+    <link rel="stylesheet" type="text/css" href="css/global.css" />
 
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
@@ -17,7 +18,7 @@
 </head>
 <body>
         <div data-role="page">
-        <div id="navBar" data-role="header" style="overflow:hidden;">
+        <div id="navBar" data-role="header" class="primary-3">
             <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-corner-all" data-rel="back"></a>
             <h1 id="title">Choose Calendars</h1>
         </div>
