--- a/correlater/www/invite.html
+++ b/correlater/www/invite.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div data-role="page">
-        <div id="navBar" data-role="header" style="overflow:hidden;">
+        <div id="navBar" data-role="header" class="primary-3">
             <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-corner-all" data-rel="back"></a>
             <h1 id="title">Invite a Friend</h1>
         </div>
