--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -7,11 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="msapplication-tap-highlight" content="no" />
 
-    <link rel="stylesheet" type="text/css" href="css/global.css" />
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
-
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.css">
+    <link rel="stylesheet" type="text/css" href="css/global.css" />
 
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
@@ -21,35 +19,31 @@
 </head>
 <body>
     <div data-role="page" id="main" data-url="demo-page">
-        <div  id="navBar" data-role="header" style="overflow:hidden;">
-            <h1 id="title"><a href="#" onClick='refresh()'>I'm Free</a></h1>
+        <div  id="navBar" data-role="header" class="primary-3">
+            <h1 id="title"><a href="#" onClick='refresh()'>Refresh</a></h1>
             <a id="menu" onClick="openMenu();" class="navItem ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all">Menu</a>
             <a id="friends" onClick="openFriends();" class="navItem ui-btn ui-icon-user ui-btn-icon-notext ui-corner-all">Friends</a>
-        </div><!-- /header -->
-        <div role="main" class="ui-content jqm-content jqm-fullwidth">
+        </div>
+        <div role="main" id="mainPage" class="ui-content jqm-content jqm-fullwidth">
             <div id="centerPanel" data-role="content">
                 <ul data-role="listview" data-inset="false" id="friendsNow"></ul>
             </div>
-        </div><!-- /content -->
+        </div>
         <div data-role="panel" id="leftPanel">
             <ul data-role="listview">
                 <li data-icon="delete"><a id="menuTitle" href="#" data-rel="close">Menu</a></li>
                 <li><a href="#panel-responsive-page2" class="ui-state-disabled">Profile</a></li>
-                <li><a href="#panel-responsive-page2" class="ui-state-disabled">Weekly Schedule</a></li>
-                <li><a href="#panel-responsive-page2" class="ui-state-disabled">Add Busy Time</a></li>
-                <li><a href="#" onClick='invite();'>Add Friends</a></li>
                 <li><a href="#panel-responsive-page2" class="ui-state-disabled">Accounts</a></li>
-                <li><a href="#panel-responsive-page2" class="ui-state-disabled">Help</a></li>
-                <li><a href="#panel-responsive-page2" class="ui-state-disabled">Settings</a></li>
-                <li><a id="logout" href="#">Log Out</a></li>
+                <li><a href="#" onClick='invite();'>Add Friends</a></li>
+                <li><a href="#" id="logout">Log Out</a></li>
             </ul>
-        </div><!-- /panel -->
+        </div>
         <div data-role="panel" id="rightPanel" data-position="right">
             <form>
                 <input data-type="search" id="divOfPs-input">
             </form>
             <ul data-role="listview" class="elements" data-filter="true" data-input="#divOfPs-input" data-inset="false" id="friendsList"></ul>
-        </div><!-- /panel -->
+        </div>
     </div>
 </body>
 </html>
