Added swipe on friendlist

--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.css">
     <link rel="stylesheet" type="text/css" href="css/global.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
 
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
@@ -42,8 +43,9 @@
             <form>
                 <input data-type="search" id="divOfPs-input">
             </form>
-            <ul data-role="listview" class="elements" data-filter="true" data-input="#divOfPs-input" data-inset="false" id="friendsList"></ul>
+            <ul data-role="listview" class="touch elements" data-split-icon="delete" data-split-theme="d" data-filter="true" data-input="#divOfPs-input" data-split-icon="delete" data-split-theme="d" data-inset="false" id="friendsList"></ul>
         </div>
+    </div><!-- /popup -->
     </div>
 </body>
 </html>
