--- a/correlater/www/fbLogin.html
+++ b/correlater/www/fbLogin.html
@@ -9,7 +9,8 @@
     // for FB.getLoginStatus().
     if (response.status === 'connected') {
       // Logged into your app and Facebook.
-      testAPI();
+	  console.log(response.authResponse.accessToken);
+	  testAPI();
     } else if (response.status === 'not_authorized') {
       // The person is logged into Facebook, but not your app.
       document.getElementById('status').innerHTML = 'Please log ' +
@@ -75,6 +76,7 @@
       console.log('Successful login for: ' + response.name);
       document.getElementById('status').innerHTML =
         'Thanks for logging in, ' + response.name + '!';
+	console.log(JSON.stringify(response));
     });
   }
 </script>
