--- a/correlater/www/nativeCreate.html
+++ b/correlater/www/nativeCreate.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" charset="utf-8" src="js/jquery.mobile-1.4.3/jquery.mobile-1.4.3.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/angular.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/createNative.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/verifynotify.js"></script>
 </head>
 <body>
     <div data-role="page">
@@ -25,7 +26,7 @@
         </div>
         <div data-role="content">
             <!-- first name, last name, email, password, verify password,  -->
-            <form method="post" id="create">
+            <form method="post" id="create" name="form">
                 <label for="first_name">First Name:</label>
                 <input type="text" name="first_name" id="first_name" value="">
                 <label for="last_name">Last Name:</label>
@@ -33,12 +34,25 @@
                 <label for="email">E-mail:</label>
                 <input type="email" name="email" id="email" value="">
                 <label for="password">Password:</label>
-                <input type="password" name="password" id="password" value="" autocomplete="off">
+                <input type="password" name="password" id="password" value="" autocomplete="off" onKeyUp="verify.check()">
                 <label for="verify_password">Verify Password:</label>
-                <input type="password" name="verify_password" id="verify_password" value="" autocomplete="off">
+                <input type="password" name="verify_password" id="verify_password" value="" autocomplete="off" onKeyUp="verify.check()">
+				<div id="password_result">&nbsp;</div>
                 <input type="submit" name="submit" value="Submit">
             </form>
             <p id="feedBack"></p>
+			<SCRIPT TYPE="text/javascript">
+			<!--
+			verify = new verifynotify();
+			verify.field1 = document.form.password;
+			verify.field2 = document.form.verify_password;
+			verify.result_id = "password_result";
+			verify.match_html = "<SPAN STYLE=\"color:blue\">Thank you, your passwords match!<\/SPAN>";
+			verify.nomatch_html = "<SPAN STYLE=\"color:red\">Please make sure your passwords match.<\/SPAN>";
+			// Update the result message
+			verify.check();
+			// -->
+			</SCRIPT>
         </div
     </div>
 </body>
