- Change APP name to Corral - Separate Sign in Pages - Google Sign In through Google - Changed Google urls to match backend - Invite and Native Sign In now uses jQuery Form Validation

--- a/correlater/www/calendar.html
+++ b/correlater/www/calendar.html
@@ -19,7 +19,7 @@
 <body>
     <div data-role="page">
         <div id="navBar" data-role="header" class="primary-3">
-            <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-corner-all" data-rel="back"></a>
+            <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-nodisc-icon" data-rel="back"></a>
             <h1 id="title">Pull Calendar</h1>
         </div>
         <div data-role="content">
