--- a/correlater/www/addAccount.html
+++ b/correlater/www/addAccount.html
@@ -19,11 +19,10 @@
 <body>
     <div data-role="page">
         <div id="navBar" data-role="header" class="primary-3">
-            <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-corner-all" data-rel="back"></a>
+            <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-nodisc-icon" data-rel="back"></a>
             <h1 id="title">Add Account</h1>
         </div>
         <div data-role="content">
-              <h1>Select one to begin!</h1>
               <button id="googleLogin" class="ui-btn ui-corner-all ui-btn ui-shadow failed">
                   Create with Google &#43;
               </button>
