--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -21,10 +21,10 @@
         <ion-side-menu-content>
         <ion-nav-bar class="bar-positive"></ion-nav-bar>
           <ion-nav-buttons side="left">
-            <button class="button button-icon button-clear ion-navicon" ng-click="toggleLeft()"></button>
+            <button class="button button-icon button-clear ion-navicon" ng-click="toggleLeft(); refreshMyInfo()"></button>
           </ion-nav-buttons>
           <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-person-stalker" ng-click="refreshRequestsList(); refreshFriendsList(); toggleRight()"></button>
+            <button class="button button-icon button-clear ion-person-stalker" ng-click="refreshRequestsList(); refreshFriendsList(); toggleRight(); refreshMyInfo()"></button>
           </ion-nav-buttons>
           <ion-nav-view animation="no-animation" name="menuContent"></ion-nav-view>
         </ion-side-menu-content>
@@ -66,7 +66,7 @@
                 <ion-item class="requestTile" class="item-balanced" ng-repeat="friend in requestsList" item="friend">
                   {{friend.first_name}} {{friend.last_name.substring(0,1).toUpperCase()}}
                   <span class="item-note">
-                    <button class="floatBlock button button-small icon ion-checkmark-round balanced" ng-click="acceptRequest(friend)">
+                    <button class="floatBlock button button-small icon ion-checkmark-round balanced" ng-click="acceptRequest(friend) refreshRequestsList();">
                     </button>
                     <p class="floatBlock">&nbsp;</p>
                     <button class="floatBlock button button-small icon ion-close-round assertive" ng-click="denyRequest(friend)">
@@ -99,7 +99,7 @@
         <ion-content>
           <ion-refresher
             pulling-text="Pull to refresh..."
-            on-refresh="refreshFriendsNow()">
+            on-refresh="refreshMyInfo(); refreshFriendsNow();">
           </ion-refresher>
           <ion-list>
             <ion-item id="{{'friend'+nowFriend.id}}" class="nowTile" ng-click="clickFriendNow('friend'+nowFriend.id)" ng-repeat="nowFriend in friendsNow"  item="nowFriend">
@@ -120,7 +120,11 @@
         </ion-content>
         <ion-footer-bar class="bar bar-subfooter"> 
           <div class="sideTab">
-            <ion-toggle id="invisSet" ng-checked="getInvisibility()" ng-model="invisible" toggle-class="toggle-balanced" ng-click="toggleInvisibility()"></ion-toggle>
+            <ion-toggle id="invisSet" ng-checked="getInvisibility()" ng-model="invisible" toggle-class="toggle-balanced" ng-click="toggleInvisibility(); refreshMyInfo()"></ion-toggle>
+          </div>
+          <div class="rightTab">
+            <p id="moodLabel">Mood</p>
+            <p id="currentMood">{{getMyMood()}}</p>
           </div>
         </ion-footer-bar>
         <ion-footer-bar class="bar bar-positive item-input-inset"> 
@@ -128,10 +132,10 @@
             <i class="icon ion-chatbox placeholder-icon"></i>
             <input id="mood" ng-model="mood" type="text" placeholder="Update your mood">
           </label>
-            <button ng-if="mood.length" class="button-icon icon ion-android-close light"
+            <button ng-if="isMoodSetEmpty()" class="button-icon icon ion-android-close light"
               ng-click="clearMood()">
             </button>
-          <button ng-if="mood.length" class="button button-outline icon ion-edit button-light" ng-click="updateMood()"></button>
+          <button ng-if="isMoodSetEmpty()" class="button button-outline icon ion-edit button-light" ng-click="updateMood(); refreshMyInfo()"></button>
         </ion-footer-bar>
       </ion-view>
     </script>
