--- a/correlater/www/addAccount.html
+++ b/correlater/www/addAccount.html
@@ -27,10 +27,8 @@
                   Create with Google &#43;
               </button>
               <div id="fbLogin"></div>
-			  <button class="ui-btn ui-corner-all ui-btn ui-shadow fb">
-                <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+			  <button id="Facebook" class="ui-btn ui-corner-all ui-btn ui-shadow fb">
 					Create with Facebook
-				</fb:login-button> 
               </button>
               <button id="nativeCreate" class="ui-btn ui-corner-all ui-btn ui-shadow">
                   Create Corral Account
